--- a/styles.css
+++ b/styles.css
@@ -5,22 +5,37 @@
 html, body{
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	margin: 0; padding: 0;
-	overflow-x: hidden;
 }
 *{
 	box-sizing: border-box;
+}
+#forkme{
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+@media only screen and (max-width: 600px) {
+	#forkme{
+		width: 120px;
+	}
 }
 main{
 	max-width: 800px;
 	width: 100%;
 	padding: 0 20px;
 	margin: auto;
+	margin-bottom: 50px;
 
 	text-align: center;
 	-moz-text-align-last: center;
 	text-align-last: center;
 }
-input[type="text"]{
+/*.seed{
+	font-size: 25px;
+	border: 1px solid #aaa;
+	padding: 10px;
+}*/
+input[type="text"], .seed{
 	padding: 10px;
 	font-size: 25px;
 	width: 100%;
@@ -30,6 +45,9 @@ input[type="text"]{
 	border: 1px solid #aaa;
 	transition: all ease-in-out .15s,box-shadow ease-in-out .15s;
 	--color: #fff;
+}
+.seed{
+	border-color: #ddd;
 }
 input[type="text"].is-valid{
 	--color: #28a745;
