highlights, words fix etc

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,15 @@ html, body{
 *{
 	box-sizing: border-box;
 }
+.error{
+	color: #f00;
+}
+.modified{
+	background: #FDECD0;
+}
+.added{
+	background: #E7F7D5;
+}
 #forkme{
 	position: absolute;
 	right: 0;
